<resources>
    <string name="app_name">Application</string>

    <string name="transport_mode">Transport Mode</string>
    <string name="mode_of_transport">Transport</string>
    <string-array name="transportMode">
        <item>Walking</item>
        <item>Public Transport</item>
        <item>Car</item>
    </string-array>
    <string name="maximum_travel_time">Maximum Travel Time</string>
    <string-array name="travelTime">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>40 minutes</item>
    </string-array>
    <string name="dietary_requirements">Dietary Requirements</string>
    <string-array name="diet">
        <item>None</item>
        <item>Halal</item>
        <item>Vegetarian</item>
        <item>Both</item>
    </string-array>
    <string name="looking_for_a_restaurant">Looking for a \nRestaurant?</string>
    <string name="location">LOCATION</string>
    <string name="enter_address">Enter Address</string>
    <string name="time">TIME</string>
    <string name="enter_a_different_time">Enter a different time</string>
    <string name="use_current_time">Use Current Time</string>
    <string name="let_s_go_makan">Let\'s Go Makan!</string>
    <string name="use_current_location">Use current location</string>
    <string name="map">map</string>
    <string name="get_recommendations">Get Recommendations</string>
    <string name="todo">todo</string>
    <string name="create_account">Create Account</string>
    <string name="setting_up_new_profile">Setting up new profile</string>
    <string name="todo1">TODO</string>
    <string name="use_current_date_and_time">Use current Date and Time</string>
    <string name="date_time"><![CDATA[DATE & TIME]]></string>
    <string name="enter_a_different_date_time"><font size="16"><![CDATA[Enter a different Date & Time]]></font></string>
</resources>